<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.com.nanoconversationdemo.MainActivity">

    <item
        android:id="@+id/end_current_chat"
        android:enabled="false"
        android:orderInCategory="2"
        android:title="@string/end_current_chat"
        android:visible="true"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/destruct_chat"
        android:orderInCategory="1"
        android:title="@string/destruct_chat_controller"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/upload_file"
        android:orderInCategory="1"
        android:title="@string/upload_file"
        android:visible="false"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/clear_history"
        android:enabled="false"
        android:orderInCategory="1"
        android:title="@string/clear_history"
        android:visible="false"
        app:showAsAction="collapseActionView" />

</menu>
