<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/form_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:animateLayoutChanges="true"
        android:background="@drawable/bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dp">

    <ScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/bot_fields"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bot_account_name_layout"
                        style="@style/TextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_hint">

                    <EditText
                            android:id="@+id/bot_account_name_edit_text"
                            style="@style/TextInputTextAppearance" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bot_knowledgebase_layout"
                        style="@style/TextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:hint="@string/kb_hint">


                    <EditText
                            android:id="@+id/bot_knowledgebase_edit_text"
                            style="@style/TextInputTextAppearance" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/bot_server_layout"
                        style="@style/TextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="18dp"
                        android:hint="@string/server_hint">


                    <EditText
                            android:id="@+id/bot_server_edit_text"
                            style="@style/TextInputTextAppearance" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bot_api_key_layout"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/api_key_hint">


                <EditText
                        android:id="@+id/bot_api_key_edit_text"
                        style="@style/TextInputTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/bot_context_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="26dp"
                    android:text="@string/bot_context_list"
                    android:textColor="@color/form_field_hint"
                    android:textSize="18sp"
                    android:visibility="gone" />

            <com.common.utils.loginForms.LinearContext
                    android:id="@+id/bot_context"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                <Button
                        android:id="@+id/add_context"
                        style="@style/main_button"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginStart="6dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/add_context" />

            </com.common.utils.loginForms.LinearContext>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bot_welcome_layout"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/welcome_hint"
                    android:visibility="gone">

                <EditText
                        android:id="@+id/bot_welcome_edit_text"
                        style="@style/TextInputTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/bot_prechat_data"
                    android:layout_marginTop="18dp"
                    android:visibility="gone">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:text="@string/bold_parameters_title"/>

                <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/bot_prechat_dept_layout"
                            style="@style/TextInputLayoutAppearance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:hint="@string/department_hint">

                        <EditText
                                android:id="@+id/bot_prechat_dept_edit_text"
                                style="@style/TextInputTextAppearance" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/bot_prechat_fname_layout"
                            style="@style/TextInputLayoutAppearance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="8dp"
                            android:hint="@string/firstName_hint">

                        <EditText
                                android:id="@+id/bot_prechat_fName_edit_text"
                                style="@style/TextInputTextAppearance" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/bot_prechat_lName_layout"
                            style="@style/TextInputLayoutAppearance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="8dp"
                            android:hint="@string/lastName_hint">

                        <EditText
                                android:id="@+id/bot_prechat_lName_edit_text"
                                style="@style/TextInputTextAppearance" />

                    </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/start_chat"
            style="@style/submit_view"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/start_chat"
            android:text="@string/start_chat" />

</LinearLayout>

