<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/form_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:animateLayoutChanges="true"
        android:background="@drawable/bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp">

    <ScrollView
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/async_api_key_layout"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/api_key_hint">


                <EditText
                        android:id="@+id/async_api_key_edit_text"
                        style="@style/TextInputTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/async_application_id_layout"
                    style="@style/TextInputLayoutAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/application_id_hint">


                <EditText
                        android:id="@+id/async_application_id_edit_text"
                        style="@style/TextInputTextAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:id="@+id/async_extra_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/async_user_id_layout"
                        style="@style/TextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/user_id_hint">


                    <EditText
                            android:id="@+id/async_user_id_edit_text"
                            style="@style/TextInputTextAppearance" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstName_layout"
                        style="@style/TextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/firstName_hint">


                    <EditText
                            android:id="@+id/async_firstName_edit_text"
                            style="@style/TextInputTextAppearance" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastName_layout"
                        style="@style/TextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/lastName_hint">


                    <EditText
                            android:id="@+id/async_lastName_edit_text"
                            style="@style/TextInputTextAppearance" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email_layout"
                        style="@style/TextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email_hint">


                    <EditText
                            android:id="@+id/async_email_edit_text"
                            style="@style/TextInputTextAppearance" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phone_layout"
                        style="@style/TextInputLayoutAppearance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/phone_hint">


                    <EditText
                            android:id="@+id/async_phone_edit_text"
                            style="@style/TextInputTextAppearance" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/restore_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="14dp"
                    android:checked="false"
                    android:text="@string/restore_if_available"
                    android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/start_chat"
            style="@style/submit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/start_chat"
            android:text="@string/start_chat" />

</LinearLayout>

