<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/show_departments"
            style="@style/main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/show_departments" />

    <LinearLayout
            android:id="@+id/departments_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/department_selection"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/departments_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="horizontal"
                android:fadingEdgeLength="5dp"
                android:scrollbars="vertical" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start_live_no_dep_instruction"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/topic_titles_text"
            android:layout_marginLeft="5dp" />

    <com.google.android.material.chip.Chip
            android:id="@+id/availability_status"
            style="@style/Widget.MaterialComponents.Chip.Entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/chip_top_gap"
            android:layout_marginBottom="5dp"
            android:checkable="false"
            android:minHeight="44dp"
            android:padding="@dimen/chip_inner_padding"
            android:text="@string/chat_with_agent"
            android:textSize="@dimen/buttons_text"
            app:chipBackgroundColor="@color/chip_state"
            app:closeIconEnabled="true"
            app:iconStartPadding="5dp"
            android:layout_marginLeft="5dp" />


</LinearLayout>