<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_for_interception"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/topic_titles_text" />

    <LinearLayout
        android:id="@+id/intercept_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_for_accessibility"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/topic_titles_text" />

    <LinearLayout
        android:id="@+id/announce_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/start_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_chat"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"/>

    </LinearLayout>
</ScrollView>

</layout>